# AITrain

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  AGENTS.md  AITrainStudio_后续实施方案.md  CMakeLists.txt  HARNESS.md  README.md  environment_profiles_report.json
.github/: copilot-instructions.md
docs/: acceptance-runbook.md  customer-ocr-validation.md  dataset-conversion.md  delivery-evidence-index.md  developer-architecture.md  external-acceptance-handoff.md  hardware-compatibility.md  local-rc-closeout.md  next-stage-rc-delivery-plan.md  operations-runbook.md  plugin-marketplace.md  plugin-package-format.md  product-roadmap-local-training-platform.md  production-ocr-acceptance.md  release-freeze-handoff.md  training-backends.md  user-guide.md  yolo-model-support-matrix.md
docs/acceptance-templates/: clean-windows-acceptance-result.md  production-ocr-acceptance-result.md  tensorrt-acceptance-result.md
docs/harness/: agent-prompts.md  current-status.md  implementation-checklist.md  project-context.md  python-trainer-protocol.md  quality-gates.md  task-brief-template.md  ui-guidelines.md
examples/: README.md  create-minimal-datasets.py
examples/plugin-package-template/: LICENSE  README.md  plugin.json
installer/: AITrainStudio.iss
python_trainers/: mock_trainer.py  requirements-ocr.txt  requirements-yolo.txt  trainer_protocol.py
python_trainers/detection/: ultralytics_trainer.py
python_trainers/ocr_det/: paddleocr_det_official_adapter.py
python_trainers/ocr_rec/: paddleocr_official_adapter.py  paddleocr_trainer.py
src/app/: CMakeLists.txt
src/app/resources/: app.qrc
src/app/src/: AiTrainAppConfig.h.in  AppStyle.cpp  AppStyle.h  DatasetConversionUiModel.cpp  DatasetConversionUiModel.h  EvaluationReportView.cpp  EvaluationReportView.h  InfoPanel.cpp  InfoPanel.h  LanguageSupport.cpp  LanguageSupport.h  MainWindow.cpp  MainWindow.h  MainWindowActions.cpp  MainWindowDatasetActions.cpp  MainWindowDatasetPage.cpp  MainWindowDeliveryActions.cpp  MainWindowDeliveryPages.cpp  MainWindowModelActions.cpp  MainWindowModelPages.cpp  MainWindowPages.cpp  MainWindowPreviews.cpp  MainWindowProjectPages.cpp  MainWindowQueueActions.cpp  MainWindowRecords.cpp  MainWindowState.h  MainWindowSummaries.cpp  MainWindowSupport.cpp  MainWindowSupport.h  MainWindowSystemPages.cpp  MainWindowTaskPage.cpp  MainWindowTrainingPage.cpp  MainWindowWorkerMessages.cpp  MetricsWidget.cpp  MetricsWidget.h  PluginMarketplaceWidget.cpp  PluginMarketplaceWidget.h  RegistrationDialog.cpp  RegistrationDialog.h  Sidebar.cpp  (+8 more)
src/app/translations/: aitrain_en_US.ts  aitrain_zh_CN.ts
src/core/: CMakeLists.txt
src/core/include/aitrain/core/: Cancellation.h  DatasetConversion.h  DatasetValidators.h  Deployment.h  DetectionDataset.h  DetectionTrainer.h  JsonProtocol.h  LicenseManager.h  OcrRecDataset.h  OcrRecTrainer.h  PluginInterfaces.h  PluginManager.h  PluginMarketplace.h  ProductWorkflow.h  ProjectRepository.h  Qt5MsvcCompat.h  SegmentationDataset.h  SegmentationTrainer.h  TaskModels.h  VisionModelExport.h  VisionModelRuntime.h  VisionPostprocess.h  WorkerProtocol.h
src/core/src/: DatasetConversion.cpp  DatasetConversionCoco.cpp  DatasetConversionCommon.cpp  DatasetConversionInternal.h  DatasetConversionVoc.cpp  DatasetConversionYolo.cpp  DatasetValidators.cpp  Deployment.cpp  DetectionDataset.cpp  DetectionTrainer.cpp  DetectionTrainerExport.cpp  DetectionTrainerInternal.h  DetectionTrainerNcnn.cpp  DetectionTrainerOcrPostprocess.cpp  DetectionTrainerOnnxRuntime.cpp  DetectionTrainerOutput.cpp  DetectionTrainerPostprocess.cpp  DetectionTrainerRuntimeHelpers.cpp  DetectionTrainerTensorRt.cpp  DetectionTrainerTiny.cpp  DetectionTrainerTinyOnnxWriter.cpp  DetectionTrainerYoloPostprocess.cpp  JsonProtocol.cpp  LicenseManager.cpp  OcrRecDataset.cpp  OcrRecTrainer.cpp  PluginManager.cpp  PluginMarketplace.cpp  ProductWorkflow.cpp  ProductWorkflowAcceptance.cpp  ProductWorkflowBenchmark.cpp  ProductWorkflowDelivery.cpp  ProductWorkflowEvaluation.cpp  ProductWorkflowPipeline.cpp  ProductWorkflowQuality.cpp  ProductWorkflowSnapshot.cpp  ProductWorkflowSupport.cpp  ProductWorkflowSupport.h  ProjectRepository.cpp  SegmentationDataset.cpp  (+11 more)
src/license_generator/: CMakeLists.txt  LicenseGeneratorWindow.cpp  LicenseGeneratorWindow.h  main.cpp
src/plugins/dataset_interop/: CMakeLists.txt  dataset_interop.json
src/plugins/dataset_interop/src/: DatasetInteropPlugin.cpp
src/plugins/ocr_rec/: CMakeLists.txt  ocr_rec.json
src/plugins/ocr_rec/src/: OcrRecNativePlugin.cpp
src/plugins/yolo_native/: CMakeLists.txt  yolo_native.json
src/plugins/yolo_native/src/: YoloNativePlugin.cpp
src/worker/: CMakeLists.txt
src/worker/src/: WorkerSession.cpp  WorkerSession.h  WorkerSessionDatasetCommands.cpp  WorkerSessionEnvironment.cpp  WorkerSessionModelCommands.cpp  WorkerSessionPipeline.cpp  WorkerSessionPythonTrainer.cpp  WorkerSessionSupport.cpp  WorkerSessionSupport.h  WorkerSessionTraining.cpp  main.cpp
tests/: CMakeLists.txt  TestSupport.cpp  TestSupport.h  tst_core.cpp  tst_dataset_conversion.cpp  tst_dataset_conversion_ui.cpp  tst_datasets.cpp  tst_detection_inference.cpp  tst_ocr_segmentation_worker.cpp  tst_platform.cpp  tst_repository_workflow.cpp
tools/: acceptance-smoke.ps1  aitrain-license-private-key.example.json  aitrain-license-private-key.json  build-inno-installer.ps1  create-local-license-key.ps1  create-plugin-marketplace-demo.ps1  create-plugin-package.ps1  customer-ocr-validation.ps1  encoding-check.ps1  harness-check.ps1  harness-context.ps1  local-rc-closeout.ps1  materialize-ultralytics-dataset.py  package-smoke.ps1  phase-ncnn-runtime-smoke.ps1  phase16-ocr-official-smoke.ps1  phase31-paddleocr-full-official-smoke.ps1  phase45-yolo-model-matrix-smoke.ps1  phase47-paddleocr-det-onnx-smoke.ps1  prepare-production-ocr-data.ps1  prepare_production_ocr_data.py  production-ocr-acceptance.ps1  release-freeze-handoff.ps1  run-production-ocr-official-chain.ps1  run-production-ocr-rec-experiment.ps1  toolchain-env.ps1  ui-workbench-walkthrough.ps1
(+10 files in other folders)
